# FedStorageServer-rs

./: .gitignore  Cargo.toml  LICENSE  rustfmt.toml
.github/workflows/: fmt.yml  test.yml
html/: fluids.html  fluids.js  freq-color.css  index.css  index.html  index.js  items.html  items.js  list.txt  locale.js
src/: cli.rs  client.rs  energy.rs  fluid.rs  http.rs  item.rs  main.rs
